cambios de velez aun faltan conclusiones y pruebas

--- a/Base.tex
+++ b/Base.tex
@@ -85,17 +85,16 @@
 	
 	%\hideControlVersion
 	\tableofcontents
-	
 	\chapter{Capitulo 1}\label{cap:Cap1}
-	\cfinput{capitulo1/introduccion} 
-	\cfinput{capitulo1/planteamientoproblema} 
+	\cfinput{capitulo1/introduccion} %ya
+	\cfinput{capitulo1/planteamientoproblema} %ya 
 	\cfinput{capitulo1/propuestasolucion}%ya
 	\cfinput{capitulo1/estadoarte} %kevin
 	\cfinput{capitulo1/justificacion} 
-	\cfinput{capitulo1/objetivos} 
-	\cfinput{capitulo1/arquitectura} 
+	\cfinput{capitulo1/objetivos} %siempre igualitos
+	\cfinput{capitulo1/arquitectura} %ya
 	\cfinput{capitulo1/limitantes} 
-	\cfinput{capitulo1/trabajoafuturo} 
+
 	%
 	\chapter{Marco teórico}\label{cap:Cap2}
 	\cfinput{capitulo2/marcoteorico}
@@ -114,8 +113,16 @@
 	
 	\cfinput{capitulo5/instalador}
 	
-	\chapter{Anexos}
+	\chapter{Pruebas}
+	\cfinput{capitulo7/pruebas}
+	\chapter{Conclusiones}
+	\cfinput{capitulo7/conclusiones}
+	\chapter{Trabajo a futuro} \label{futurolol}
+	\cfinput{capitulo7/trabajoafuturo} 
+	\cfinput{capitulo7/referencias}\label{referencias}
+	
+	\chapter{Anexos} 
 	\cfinput{capitulo6/a}\label{anexoa}
 	\cfinput{capitulo6/b}\label{anexob}
-	\cfinput{capitulo7/referencias}\label{referencias}
+
 \end{document}
