--- a/capitulo4/prototipo2.tex
+++ b/capitulo4/prototipo2.tex
@@ -117,7 +117,7 @@ Teniendo como referencia la imagen \nameref{fig:redi2} se explicarán los módul
 	\item \textbf{Combinación}: Todos los datos de salida que arrojo la función de reducción son combinados y puestos en un solo grupo para generar un resultado final.
 \end{enumerate}
 
-\section{Desarrollo}
+\section{Desarrollo}\label{seccion5}
 Para que Instalar Apache Hadoop en la red distribuida en funcionamiento se siguió el Manual de Instalación de Luminus 
 en sus secciones 
 \begin{verbatim}
@@ -145,7 +145,7 @@ En el momento de subir el archivo al HDFS se puede comprobar que la red distribu
 para lo cual es indispensable comunicarse con todos los nodos que se encuentran dentro de la misma. Esto con el
 objetivo de realizar el almacenamiento de manera distribuida haciendo uso de todos los nodos de datos/replica. Por lo
 tanto se sabe que la red distribuida tiene conectividad y se encuentra funcionando de manera apropiada.
-\subsection{Algoritmo de prueba}
+\subsection{Algoritmo de prueba} \label{seccion6}
 El siguiente algoritmo escrito en JAVA servirá para comprobar que se pueden realizar operaciones sobre los datos
 que se encuentran en el cluster.
 \\
