--- a/capitulo7/trabajoafuturo.tex
+++ b/capitulo7/trabajoafuturo.tex
@@ -1,4 +1,4 @@
-\section{Trabajo a futuro}
+\section{Trabajo a futuro} 
 \subsection{Prototipo 3: Página web y algoritmos de minería de datos}
 \label{proto3}
 Se pretende desarrollar este prototipo en Trabajo Terminal 2 el cual incluirá las siguientes tareas:
@@ -20,11 +20,17 @@ Integrar los 2 puntos comprendidos en el prototipo 3 los cuales pueden ser consu
 Además de que estos algoritmos se ejecutarán en el cluster generado en los prototipos Prototipo 1 \nameref{cap:Cap3} y Prototipo 2 \nameref{cap:Cap4} desarrollados en trabajo terminal 1.
 \subsection{Prototipo 5: Luminus}
 Este prototipo se encontraba diseñado unicamente para convertir este proyecto a un ambiente de análisis de datos adaptable a otros casos de estudio, sin embargo, se vio la necesidad de crear un instalador que permita cargar todo el contenido del Trabajo Terminal al equipo del cliente para que este pueda utilizarlo.\\
-Esto con el objetivo de que, el instalador cargue a su equipo todo lo que Luminus necesita para funcionar. y unicamente trabaje sobre el la plantilla de ajuste. \\
+Esto con el objetivo de que, el instalador cargue a su equipo todo lo que Luminus necesita para funcionar.
+\\
+Una vez que la instalación finalice unicamente se trabajará sobre la plantilla de ajuste. \\
 Por tal motivo se explicarán los alcances de la plantilla y del instalador por separado.
 \subsubsection{Plantilla de ajuste}
-Para la parte de la plantilla de ajusteo se busca que se diseñe una plantilla de ajuste la cual permita la adaptación para otros casos de estudio debido a que los algoritmos de Big Data suelen tener diferentes entradas, las cuales cambian de acuerdo para cada caso de estudio.
+Para la parte de la plantilla de ajuste se busca que se diseñe una plantilla que tenga como entradas los parámetros necesarios para permitir la adaptación para otros casos de estudio a los algoritmos de Big Data, ya que estos tienen diferentes entradas para cada algoritmo y que además cambian para cada caso de estudio.
 \\
+Por lo que será necesario definir las entradas necesarias para cada algoritmo y la forma en la que estas pueden interactuar entre diferentes casos de estudio.
+\\
+Y con ella unicamente se tendrán que establecer dichos valores para que el ambiente de Big Data pueda ponerse a trabajar y ofrecer resultados que se ajusten a cada conjunto de datos en el caso de estudio que se desee aplicar.
+
 \subsubsection{Instalador}
 Un instalador suele ser un sistema bastante complejo, ya que realiza las siguientes tareas:
 \begin{itemize}
