--- a/capitulo1/planteamientoproblema.tex
+++ b/capitulo1/planteamientoproblema.tex
@@ -1,13 +1,22 @@
 \section{Planteamiento del problema}
-En la actualidad, el valor de los datos es muy importante para las empresas; cuando se hace un análisis correcto de la información histórica almacenada, se pueden hacer estadísticas de comportamiento e inclusive predicciones de eventos que vendrán en el futuro, las cuales ayudan a la toma de decisiones \cite{Baz}. Conforme los datos crecen en el tiempo, también la complejidad en el procesamiento de estos datos aumenta. Una de las tendencias de años recientes, llamada Big Data, utiliza un esquema de cómputo distribuido para aprovechar la infraestructura de cómputo disponible en la empresa, y resuelve de manera cooperativa los problemas de análisis de datos \cite{refi}. Aunque esta forma de trabajo parece simple, la implementación y puesta en marcha se complica por diversos factores.
-Como son:\\
+En la actualidad, el valor de los datos es muy importante para las empresas; cuando se hace un análisis correcto de la información histórica almacenada, se pueden hacer estadísticas de comportamiento e inclusive predicciones de eventos que vendrán en el futuro, las cuales ayudan a la toma de decisiones \cite{Baz}. Conforme los datos crecen en el tiempo, también la complejidad en el procesamiento de estos datos aumenta. Una de las tendencias de años recientes, llamada Big Data, utiliza un esquema de cómputo distribuido para aprovechar la infraestructura de cómputo disponible en la empresa, y resuelve de manera cooperativa los problemas de análisis de datos \cite{refi}. 
+\\
+Si esta tendencia es aplicada de manera efectiva, los datos que se generan, pueden significar que las empresas se muevan mucho más rápidamente, sin problemas y de manera mas eficiente. ya que son capaces de proporcionar respuestas a preguntas que de otra forma la empresa ni siquiera sabía de su existencia.
+\\
+Con una cantidad tan grande de información, los datos pueden ser moldeados o probados de cualquier manera que la empresa considere adecuada. Al hacerlo, las organizaciones son capaces de identificar los problemas de una forma más comprensible \cite{refi2}. 
+\\
+\subsection{Problemática}
+A pesar de todas las utilidades que ofrece hacer uso de Big Data a las empresas, también se tiene que considerar que su uso implica una gran inversión de recursos económicos, recursos humanos y tiempo. 
+\\
+Las curvas de aprendizaje de las tecnologías con que se hace uso de Big Data suelen ser pronunciadas, por lo que generalmente conlleva un tiempo amplio a quienes quieren aprender a usarlas. Además de que se requiere de una base de conocimiento en cuestión de bases de datos, sistemas operativos, programación, entre otras áreas. 
+\\
+En el ámbito económico, implementar un ambiente de Big Data suele tener un costo económico muy elevado, ya que normalmente se utilizan servidores dedicados. Tanto costo de los equipos mismos, como de su mantenimiento y el acondicionamiento del lugar donde se pondrán a funcionar, significa un costo elevado.\\
+Por otro lado, considerando estas problemáticas, la implementación y puesta en marcha de un ambiente de Big Data también se puede complicar al momento incluir los datos que la empresa desea analizar. Las razones por las que esto comúnmente pasa, se explican a continuación:
 \begin{itemize}
-\item Datos de gran volumen.\cite{refi2}\\
-\item Los datos cambian rápidamente por lo que su tiempo de validez es muy corto.\cite{refi2}\\
-\item En ocasiones es difícil encontrar patrones para agrupar datos provenientes de diversas fuentes.\cite{refi2}\\
-\item Es necesario discernir entre qué datos son importantes en el análisis y cuáles no lo son.\cite{refi2}\\
-\item Es necesario integrar diferentes tipos de datos (estructurados, no estructurados, semiestructurados).\cite{refi2}\\
-\item No existen estándares de calidad de datos unificados.\cite{refi2}\\
-\end{itemize}
-El problema con el uso de Big Data es que implica una gran inversión de recursos económicos, recursos humanos y tiempo. Las curvas de aprendizaje de las tecnologías con que se hace uso de Big Data suelen ser algo pronunciadas, por lo que generalmente conlleva un tiempo algo amplio a quienes quieren aprender a usarlas. Además de que se requiere de una base de conocimiento en cuestión de bases de datos, sistemas operativos, programación, entre otras áreas. En el ámbito económico, implementar un ambiente de Big Data suele tener un costo económico muy elevado, ya que normalmente se utilizan servidores dedicados. Tanto costo de los equipos mismos, como de su mantenimiento y el acondicionamiento del lugar donde se pondrán a funcionar, es bastante alto.\\
+	\item Datos de gran volumen.\cite{refi2}\\
+	\item Los datos cambian rápidamente por lo que su tiempo de validez es muy corto.\cite{refi2}\\
+	%\item El tiempo de procesamiento requerido para efectuar Big Data en grandes volúmenes de datos escala proporcionalmente conforme la cantidad de datos aumenta. \\ 
+	\item Debido a que los datos son muy volátiles para que se obtengan resultados valiosos al aplicar Big Data sobre ellos se requiere un poder de procesamiento alto. \\
+	\item Es necesario discernir entre qué datos son importantes en el análisis y cuáles no lo son.\cite{refi2}\\
+\end{itemize}  
 
