estado del arte

--- a/capitulo1/estadoarte.tex
+++ b/capitulo1/estadoarte.tex
@@ -8,8 +8,6 @@ Actualmente en el mercado existen diferentes alternativas para los usuarios que 
 	\begin{tabular}{l|l|l}
 		SOFTWARE & CARACTERÍSTICAS & PRECIO EN EL MERCADO\\
 					\hline                                              
-		Luminus          & \begin{tabular}[c]{@{}l@{}}-Trabaja con datos que se encuentra en distintos equipos\\ de cómputo (Red distribuida)\\ -Se puede seleccionar el algoritmo de minería de datos a\\ utilizar para su funcionamiento dentro de un listado de\\ algoritmos disponibles\\ -Es capaz de detectar cuando alguno de los nodos de datos\\ es modificado antes de resolver un determinado problema\\ -Los datos son extraídos directamente de los repositorios\\ en tiempo real\\ -Se trabaja con archivos JSON de los datos de entrada\\ -Ejecuta flujos de datos directamente hacia Spark\end{tabular} & Próximamente en el mercado                                                                                       \\
-		\hline
 		Knime            & \begin{tabular}[c]{@{}l@{}}-Diferentes maneras de presentar los datos como creación\\ de modelos estadísticos y de minería de datos, como\\ árboles de decisión, máquinas de vector soporte,\\ regresiones, etc.\\ -Aplicación de modelos creados con Knime sobre\\ conjuntos nuevos de datos.\\ -Creación de informes\\ -Posible incorporación de nuevos módulos en lenguaje R o\\ Python por el usuario final.\\ Tamaño de instalación: 1.98GB para la versión gratuita \cite{refi3} \end{tabular}                                                                                                       & \begin{tabular}[c]{@{}l@{}}Gratuita (Menos funcionalidad)/\\ De costo\\ Desde \$44,200 pesos al año por\\ un usuario\\ Hasta \$466,410 pesos al año\\ por 5 usuarios\end{tabular}     
 		                        \\
 		\hline		                       
@@ -33,4 +31,13 @@ Actualmente en el mercado existen diferentes alternativas para los usuarios que 
 
 		\end{tabular}
 	\end{table}
+\end{itemize}
+
+Podría decirse que \emph{Luminus} es un híbrido entre las dos clasificaciones anteriormente citadas. Las principales características de \emph{Luminus} son las siguientes:
+\begin{itemize}
+	\item Trabaja con datos que se encuentra en distintos equipos de cómputo (Red distribuida).\\ 
+	\item El usuario puede seleccionar el algoritmo de minería de datos a utilizar para su funcionamiento dentro de un listado de algoritmos disponibles.\\ 
+	\item Es capaz de detectar cuando alguno de los nodos de datos es modificado antes de resolver un determinado problema.\\
+	\item Los datos son extraídos directamente de los repositorios en tiempo real.\\
+	\item Se trabaja con archivos JSON de los datos de entrada.\\ 
 \end{itemize}
