--- a/capitulo2/marcoteorico.tex
+++ b/capitulo2/marcoteorico.tex
@@ -5,7 +5,7 @@ En la actualidad, la necesidad de almacenamiento de datos crece a niveles expone
 \section{Big Data}
 Al ser el Big Data un concepto tan importante para este trabajo, se procederá a definirlo, ya que como se menciona en el \textbf{Capítulo 1}, \emph{Luminus} realizará procesamiento de grandes cantidades de información.\\ 
 
-El término Big Data se refiere a cantidades enormes de información, por ejemplo, la cantidad de información que se produce todos los días con el uso de una red social como Facebook, o la cantidad de datos que producen computadoras y dispositivos electrónicos que se auto monitorean mediante sensores. Esos volúmenes masivos de datos pueden ser utilizados para extraer conocimiento de ellos, y posteriormente atacar problemas que no sería posible resolver sin el Big Data.\cite{bigDataDef}
+El término Big Data se refiere a cantidades enormes de información, por ejemplo, la cantidad de información que se produce todos los días con el uso de una red social como Facebook, o la cantidad de datos que producen computadoras y dispositivos electrónicos que se auto monitorean mediante sensores. Esos volúmenes masivos de datos pueden ser utilizados para extraer conocimiento de ellos, y posteriormente atacar problemas que no sería posible resolver sin el Big Data.\cite{bigDataDef}\\
 
 \subsection{Las 3 Vs del Big Data}
 Al ser el Big Data un concepto emergente y relativamente nuevo, se han tenido ciertas dificultades para definirlo de manera uniforme. Debido a las dimensiones de todo lo que conlleva entender Big Data, resultó conveniente entre los estudiosos del tema definir y acentuar las magnitudes que lo definen. Estas magnitudes se conocen como las 3 Vs del Big Data.
@@ -948,4 +948,5 @@ El diagrama mostrado a continuación ilustra los principales módulos o \textbf{
 \end{UClist}
 
 \section{Interfaz Web}
-Una \textbf{interfaz de usuario} es el medio por el cual un usuario de una sistema computacional interactúa con el sistema. Se dice que una interfaz es \textbf{web} cuando el medio que despliega y renderiza la interfaz es un navegador web.Definir este concepto es importante ya que la interfaz de usuario de \emph{Luminus} será una interfaz web.\\
+Una \textbf{interfaz de usuario} es el medio por el cual un usuario de un sistema computacional interactúa con el sistema. Se dice que una interfaz es \textbf{web} cuando el medio que despliega y renderiza la interfaz es un navegador web. Definir este concepto es importante ya que la interfaz de usuario de \emph{Luminus} será una interfaz web.\\
+
