--- a/capitulo7/referencias.tex
+++ b/capitulo7/referencias.tex
@@ -87,5 +87,11 @@
 	\bibitem{spark} \textsc{Abraham Requena Mesa} (2018) \textit{Qué es Apache Spark}, Julio 02, 2018 de OpenWebinars. Sitio web: https://openwebinars.net/blog/que-es-apache-spark/
 	%ref
 	\bibitem{distH} \textsc{David Loshin} (2017) \textit{Explorando distribuciones Hadoop para gestionar big data}, Mayo 30, 2017, de SearchDataCenter. Sitio web: https://searchdatacenter.techtarget.com/es/cronica/Explorando-distribuciones-Hadoop-para-gestionar-big-data
-
+	%ref
+	\bibitem{cluster} \textsc{Microsoft} (2018) \textit{What is a server cluster?}, Mayo 28, 2018, de Microsoft. Sitio web: https://technet.microsoft.com/pt-pt/library/cc785197(v=ws.10).aspx
+	%ref
+	\bibitem{ambiente} \textsc{BTECH} (2010) \textit{What is Computing Environment?}, Julio 12, 2010, de BTECH. Sitio web: http://btechsmartclass.com/CP/computing-environments.htm
+	%ref
+	\bibitem{bayesianas} \textsc{Devin Soni} (2018) \textit{Introduction to Bayesian Networks}, Junio 8, 2018, de Towards Data Science. Sitio web: https://towardsdatascience.com/introduction-to-bayesian-networks-81031eeed94e
+	
 \end{thebibliography}
