un tar que necesito

--- a/capitulo1/propuestasolucion.tex
+++ b/capitulo1/propuestasolucion.tex
@@ -1,5 +1,5 @@
 \section{Propuesta de solución}
-En este trabajo terminal se propone desarrollar un ambiente de Big Data que pueda adaptarse a diferentes casos de estudio o dicho en otras palabras, grupos de datos con diferentes características a analizar, incluyendo un archivo de configuración que permita realizar las adaptaciones correspondientes para cada uno de estos casos de estudio.
+En este trabajo terminal se propone desarrollar un ambiente de Big Data que pueda adaptarse a diferentes casos de estudio o dicho en otras palabras, grupos de datos diferentes donde se desea aplicar un determinado algoritmo, incluyendo un archivo de configuración que permita realizar las adaptaciones correspondientes para cada uno de estos casos de estudio.
 \\
 El ambiente de Big Data incluirá la aplicación de los siguientes algoritmos de minería de datos: \\
 \begin{itemize}
